--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -2,6 +2,9 @@
   "home": {
     "listen": "Écoutez de la bonne musique!"
   },
+  "manage": {
+    "my_songs": "Mes chansons"
+  },
   "register": {
     "accept": "",
     "comment_count": ""
